--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -312,7 +312,11 @@ display:block;
 .bottom { transform: rotateX(-90deg) translateZ(300px); }
 
 #next{
-    height:3vh;
-    width:5vw;
-    border-radius:5px;
+    height:10vh;
+    width:20vw;
+    border-radius:5vh;
+    background-color:#2857a4;
+    color:white;
+    font-size:1.5rem;
+    font-weight: bold;
 }
