add and retrieve  comment to and from datastore

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -240,6 +240,7 @@ display:block;
 #timeline-divider .timeline-traveller {
     position: sticky;
     top: 135px;
+    font-size:3rem;
     z-index: 2;
 }
 
