make delete button big

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -324,3 +324,21 @@ display:block;
     font-size:1.5rem;
     font-weight: bold;
 }
+/* comments */
+.comment{
+    height:10vh;
+    padding: 2vh;
+    margin-top:2vh;
+    width:20vw;
+    list-style: none;
+}
+.comment span{
+    font-size:2rem;
+    padding:1vh;
+}
+.comment button{
+    height:5vh;
+    width:10vw;
+    padding:1vh;
+    font-size:2rem;
+}
