--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -350,3 +350,9 @@ opacity:1;
 position:relative;
 opacity:0;
 }
+/* map */
+#map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+      }
